RESOLVED FIXED281282
Nullptr crash in WebCore::HTMLAnchorElement::isKeyboardFocusable
https://bugs.webkit.org/show_bug.cgi?id=281282
Summary Nullptr crash in WebCore::HTMLAnchorElement::isKeyboardFocusable
p_choudhury
Reported 2024-10-10 23:29:08 PDT
CrashTracer: [USER] Safari at com.apple.WebCore • WebCore::HTMLAnchorElement::isKeyboardFocusable const + 171
Attachments
p_choudhury
Comment 1 2024-10-10 23:29:32 PDT
p_choudhury
Comment 2 2024-10-10 23:35:06 PDT
p_choudhury
Comment 3 2024-10-10 23:37:29 PDT
EWS
Comment 4 2024-10-14 14:41:03 PDT
Committed 285145@main (952a0bb86645): <https://commits.webkit.org/285145@main> Reviewed commits have been landed. Closing PR #34927 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.