Nullptr crash in WebCore::HTMLAnchorElement::isKeyboardFocusable https://bugs.webkit.org/show_bug.cgi?id=281282 rdar://137177639

Reviewed by Ryosuke Niwa.

Added nullptr check for the LocalFrame before focused keyboard events.
This does not have a reliable test case but have tested locally on Mac
that WebKit does not have this crash.

* Source/WebCore/html/HTMLAnchorElement.cpp:
(WebCore::HTMLAnchorElement::isKeyboardFocusable const):
* Source/WebCore/svg/SVGAElement.cpp:
(WebCore::SVGAElement::isKeyboardFocusable const):

Canonical link: https://commits.webkit.org/285145@main